# RL-Verifier

./: .gitignore  aime24_eval_qwen.py  common.py  main.py  pyproject.toml  tmp.py  train_grpo.py  verifier_log.txt
aime_2024/: chat.jsonl  test.jsonl  train.jsonl
aime_2025/: test.jsonl  train.jsonl
experiments/: aime25_baseline.py  baseline.py  common.py  reward_func.py  sampler.py  verifier.py
outputs/aime25_baseline/: Qwen_Qwen3-4B-Base_test.json  Qwen_Qwen3-4B-Base_train.json
outputs/baseline/: Qwen_Qwen3-4B-Base_test.json  Qwen_Qwen3-4B-Base_train.json
scripts/: verifier-based-grpo.sh  vllm.sh
