[project]
name = "rl-verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flash-attn",
    "flashinfer-python>=0.6.6",
    "math-verify>=0.9.0",
    "openai>=2.29.0",
    "peft>=0.18.1",
    "setuptools>=82.0.1",
    "tokenizers==0.22.2",
    "torch==2.6",
    "transformers==4.57.3",
    "trl>=0.29.0",
    "vllm==0.8.5.post1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3+cu12torch2.6cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
